  * Increased the number of in-flight queries to 4.  Thanks to Greg Hazel.
  * Implement variable-size buckets (between 8 and 128).  Thanks to Greg
    Hazel.
  * Improved search speed during bootstrap.  Thanks to Greg Hazel.
  * Fixed a bug in the parser that would spuriously insert peers with port
    number 1.  Thanks to Carl Reinke.

18 May 2015: dht-0.24

  * Fixed off-by-one error that dropped find_nodes responses with exactly
    16 nodes.  While forbidden by BEP-5, this is apparently what the good
    folks at BitTorrent are doing.  Thanks to Tomas Brod.

15 May 2015: dht-0.23

  * Changed the limit on the number of nodes in replies to 16.  Thanks to
    Tomas Brod.
  * Fixed a memory leak when initialisation fails.  Thanks to 3null.
  * Fixed a Y2038 issue.  Thanks to Gwiz65.

3 May 2014: dht-0.22

  * INCOMPATIBLE CHANGE: the callback now takes const arguments.
  * Consult the local storage when performing a search, which should
    make bootstrapping of tiny DHTs easier.  Note that we're still not
    performing local stores, since that would require knowing our IP
    address.
  * Don't attempt to flush the debug stream if debugging is disabled.
    This appears to work around a bug in Transmission.

25 July 2011: dht-0.21

  * Blacklisting support.

7 July 2011: dht-0.20

  * Fix compilation on systems that have memmem but don't define HAVE_MEMMEM.

30 April 2011: dht-0.19

  * Fix incorrect parsing of announces.  Thanks to cjdelisle.
  * Relax rate limiting slightly.

20 January 2011: dht-0.18

  * Fix a bug that could cause parse_message to enter an infinite loop
    on overflow.  Thanks to Jordan Lee.

9 January 2011: dht-0.17:

  * Fix a bug that prevented calling dht_init after dht_uninit.
  * Remove the "dofree" parameter to dht_uninit.

23 December 2010: dht-0.16:

  * Change the interface to allow sharing of the UDP socket e.g. with uTP.

1 July 2010: dht-0.15

  * Port to Windows, for the needs of Transmission.

25 March 2010: dht-0.14
