@@ -273,6 +273,7 @@ static int parse_message(const unsigned char *buf, int buflen,
                          unsigned char *info_hash_return,
                          unsigned char *target_return,
                          unsigned short *port_return,
+                         int *implied_port_return,
                          unsigned char *token_return, int *token_len,
                          unsigned char *nodes_return, int *nodes_len,
                          unsigned char *nodes6_return, int *nodes6_len,
@@ -2022,6 +2023,7 @@ dht_periodic(const void *buf, size_t buflen,
         int tid_len = 16, token_len = 128;
         int nodes_len = 26*16, nodes6_len = 38*16;
         unsigned short port;
+        int implied_port;
         unsigned char values[2048], values6[2048];
         int values_len = 2048, values6_len = 2048;
         int want;
@@ -2042,7 +2044,7 @@ dht_periodic(const void *buf, size_t buflen,
         }
 
         message = parse_message(buf, buflen, tid, &tid_len, id, info_hash,
-                                target, &port, token, &token_len,
+                                target, &port, &implied_port, token, &token_len,
                                 nodes, &nodes_len, nodes6, &nodes6_len,
                                 values, &values_len, values6, &values6_len,
                                 &want);
@@ -2241,6 +2243,20 @@ dht_periodic(const void *buf, size_t buflen,
                 send_error(from, fromlen, tid, tid_len,
                            203, "Announce_peer with wrong token");
                 break;
+            }
+            if(implied_port != 0) {
+                if(port != 0) {
+                    debugf("Both port and implied_port.\n");
+                    /* But continue, that's what the spec says. */
+                }
+                switch(from->sa_family) {
+                case AF_INET:
+                    port = htons(((struct sockaddr_in*)from)->sin_port);
+                    break;
+                case AF_INET6:
+                    port = htons(((struct sockaddr_in6*)from)->sin6_port);
+                    break;
+                }
             }
             if(port == 0) {
                 debugf("Announce_peer with forbidden port %d.\n", port);
@@ -2874,6 +2890,7 @@ parse_message(const unsigned char *buf, int buflen,
               unsigned char *tid_return, int *tid_len,
               unsigned char *id_return, unsigned char *info_hash_return,
               unsigned char *target_return, unsigned short *port_return,
+              int *implied_port_return,
               unsigned char *token_return, int *token_len,
               unsigned char *nodes_return, int *nodes_len,
               unsigned char *nodes6_return, int *nodes6_len,
@@ -2936,6 +2953,19 @@ parse_message(const unsigned char *buf, int buflen,
                 *port_return = 0;
         } else
             *port_return = 0;
+    }
+    if(implied_port_return) {
+        p = dht_memmem(buf, buflen, "12:implied_porti", 16);
+        if(p) {
+            long l;
+            char *q;
+            l = strtol((char*)p + 16, &q, 10);
+            if(q && *q == 'e' && l > 0 && l < 0x10000)
+                *implied_port_return = l;
+            else
+                *implied_port_return = 0;
+        } else
+            *implied_port_return = 0;
     }
     if(target_return) {
         p = dht_memmem(buf, buflen, "6:target20:", 11);
